# fun

./: .gitignore  README.md
flashattn/: flashattn.py  flashattn2.py  flashattn2_pyxis.py
gemm/: README.md  gemm.cpp  gemm.py  runner.ptx
gemm/src/: runner.cu  runner.cuh
gemm/src/kernels/: 01_naive.cuh  01_naively_coalesced.cuh  02_coalesced.cuh  03_shared_mem_2d.cuh  04_1d_blocktiling.cuh
gpu/: README.md  benchmark_m1.py  gemm.cpp  gemm.cu  gemm.h  gemm.py  io.h
gpu/kernels/: 01_naive.cu  01_sgemm_naive.cu  01_sgemm_naively_coalesed.cu  02_coalescing.cu
gpu/src/: kernels.cuh  runner.cu  runner.cuh
gpu/src/kernels/: 01_naively_coalesced.cuh  02_coalesced.cuh  03_shared_memory_blocking.cuh  04_1d_blocktiling.cuh
interpolation/: interpolate.py  simple.py
spconv/: CMakeLists.txt  spconv  spconv.cpp
spconv/spconv.dSYM/Contents/: Info.plist
spconv/spconv.dSYM/Contents/Resources/DWARF/: spconv
voxelize/: CMakeLists.txt  io.h  setup.py  voxelize.cpp  voxelize.py  voxelize_cpu.cpp  voxelize_cuda_kernel.cu
voxelize/test/bevfusion/: test_voxelize.py
