cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(voxelize)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_PREFIX_PATH /home/vincent/libs/libtorch)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
find_package(Torch REQUIRED)

# find_package(Python3 COMPONENTS Interpreter Development)
add_executable(voxelize voxelize_cpu.cpp)
# target_include_directories(voxelize PUBLIC "/home/vincentmayer/.pyenv/versions/3.9.16/include/python3.9")
target_include_directories(voxelize PUBLIC "/home/vincent/libs/libnpy-0.1.0/include")
target_link_libraries(voxelize ${TORCH_LIBRARIES})
set_property(TARGET voxelize PROPERTY CXX_STANDARD 14)
